Fix styling issue where on mobile, the radio buttons were appearing too close to edge of container

--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,6 +1,6 @@
 button {
-  margin-top: 1rem;
-  height: 50px;
+  /* margin-top: 1rem; */
+  height: 40px;
   width: 95%;
   border-radius: 5px;
   text-transform: uppercase;
